REGRESSION(r144318) 1-7% perf. regression on SVG/SvgHitTesting https://bugs.webkit.org/show_bug.cgi?id=111117

Make sure the allocated vector has a capacity of 1, since that is
far and away the most common case.

Reviewed by Andreas Kling.

* rendering/RenderFlowThread.h:
(WebCore):
* rendering/RenderLayer.h:
(WebCore):
* rendering/RenderMultiColumnSet.cpp:
(WebCore::RenderMultiColumnSet::collectLayerFragments):
* rendering/RenderMultiColumnSet.h:
* rendering/RenderRegion.h:
(WebCore):
(WebCore::RenderRegion::collectLayerFragments):



Canonical link: https://commits.webkit.org/129544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144484 268f45cc-cd09-0410-ab3c-d52691b4dbfc