Source/WebCore/rendering/RenderFlowThread.h
@@ -40,7 +40,7 @@
 namespace WebCore {
 
 struct LayerFragment;
-typedef Vector<LayerFragment> LayerFragments;
+typedef Vector<LayerFragment, 1> LayerFragments;
 class RenderFlowThread;
 class RenderStyle;
 class RenderRegion;
